*** empty log message ***

--- a/about/ChangeLogs/index.html
+++ b/about/ChangeLogs/index.html
@@ -1,17 +1,41 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - GIMP ChangeLog</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
-<style type="text/css">
-</style>
-<div class="heading" style="z-index: 5;">GIMP Source ChangeLogs</div>
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
+<div class="heading">GIMP Source ChangeLogs</div>
 
-<a href="ChangeLog-1.2.3.txt">GIMP Stable 1.2.3 ChangeLog</a><br>
-<a href="ChangeLog-gimp-unstable.txt">GIMP Unstable ChangeLog (most recent 100 lines)</a><br>
-<a href="ChangeLog-gegl-unstable.txt">GEGL Unstable ChangeLog (most recent 100 lines)</a><br>
-<a href="ChangeLog-gimp-help.txt">GIMP Help ChangeLog (most recent 100 lines)</a><br>
-<a href="ChangeLog-film-gimp.txt">FILM GIMP Help ChangeLog (most recent 100 lines)</a><br>
-<a href="ChangeLog-gimp-print.txt">GIMP Print ChangeLog (most recent 100 lines)</a><br>
+  <fieldset>
+  <legend><b>Released Versions</b></legend>
+  <table><tbody>
+      <tr><td>GIMP Stable 1.2.3 ChangeLog</td>
+        <td><a href="ChangeLog-1.2.3.txt">text</a></td>
+        <td></td></tr>
+    </tbody></table>
+  </fieldset>
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+  <br />
+  <br />
+  
+  <fieldset>
+  <legend>Current Development</legend>
+  <table><tbody>
+          <tr><td>GIMP Unstable ChangeLog (most recent log entries)</td>
+            <td><a href="ChangeLog-gimp-unstable.txt">text</a></td>
+            <td><a href="ChangeLog-gimp-unstable.html">html</a></td></tr>
+          <tr><td>GEGL Unstable ChangeLog (most recent log entries)</td>
+            <td><a href="ChangeLog-gegl-unstable.txt">text</a></td>
+            <td><a href="ChangeLog-gegl-unstable.html">html</a></td></tr>
+          <tr><td>GIMP Help ChangeLog (most recent log entries)</td>
+            <td><a href="ChangeLog-gimp-help.txt">text</a></td>
+            <td><a href="ChangeLog-gimp-help.html">html</a></td></tr>
+          <tr><td>FILM GIMP Help ChangeLog (most log entries)</td>
+            <td><a href="ChangeLog-film-gimp.txt">text</a></td>
+            <td><a href="ChangeLog-film-gimp.html">html</a></td></tr>
+          <tr><td>GIMP Print ChangeLog (most recent log entries)</td>
+            <td><a href="ChangeLog-gimp-print.txt">text</a></td>
+            <td><a href="ChangeLog-gimp-print.html">html</a></td></tr>
+          </tbody></table>
+  </fieldset>
+
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
