*** empty log message ***

--- a/about/ChangeLogs/index.html
+++ b/about/ChangeLogs/index.html
@@ -8,7 +8,7 @@
   <legend><b>Released Versions</b></legend>
   <table><tbody>
       <tr><td>GIMP Stable 1.2.3 ChangeLog</td>
-        <td><a href="ChangeLog-1.2.3.txt">text</a></td>
+        <td><a href="ChangeLog-1.2.3/">text</a></td>
         <td></td></tr>
     </tbody></table>
   </fieldset>
