--- a/links/index.html
+++ b/links/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - GIMP Links</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">GIMP Links</div>
 This page contains the best links to interesting GIMP-sites:
@@ -131,5 +131,5 @@ This page contains the best links to interesting GIMP-sites:
 <b>Disclaimer:</b> this page does not contain all GIMP-links available. This is just a nice overview.<br />
 More links can be found on <a href="http://gimp.start4all.com">the GIMP-startpage</a> instead.
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
