--- a/links/org.html
+++ b/links/org.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - GIMP Links</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">GIMP Links</div>
 <p>&nbsp;</p>
@@ -78,7 +78,7 @@
   <a href="http://xach.gimp.org">xach.gimp.org</a><br />
   The model for GIMP help.
 </p>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
 
 
