--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -1,60 +1,60 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Resources</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 <!--This page rendered with mgo-brushes -->
 <div class="heading">Resources</div>
 <div class="subtitle">Included With The GIMP</div>
 <p>More than just a bunch of tools, The GIMP has stuff too ....</p>
-<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample">Calligraphic Brush</div>
-<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample">Calligraphic Brush#2</div>
-<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush3.png" width="32" height="32" alt="brush sample">Calligraphic Brush#3</div>
-<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush4.png" width="32" height="32" alt="brush sample">Calligraphic Brush#4</div>
-<div><img style="vertical-align: text-middle;" src="Circle_01.png" width="32" height="32" alt="brush sample">Circle (01)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_03.png" width="32" height="32" alt="brush sample">Circle (03)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_05.png" width="32" height="32" alt="brush sample">Circle (05)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_07.png" width="32" height="32" alt="brush sample">Circle (07)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_09.png" width="32" height="32" alt="brush sample">Circle (09)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_11.png" width="32" height="32" alt="brush sample">Circle (11)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_13.png" width="32" height="32" alt="brush sample">Circle (13)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_15.png" width="32" height="32" alt="brush sample">Circle (15)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_17.png" width="32" height="32" alt="brush sample">Circle (17)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_19.png" width="32" height="32" alt="brush sample">Circle (19)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_03.png" width="32" height="32" alt="brush sample">Circle Fuzzy (03)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_05.png" width="32" height="32" alt="brush sample">Circle Fuzzy (05)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_07.png" width="32" height="32" alt="brush sample">Circle Fuzzy (07)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_09.png" width="32" height="32" alt="brush sample">Circle Fuzzy (09)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_11.png" width="32" height="32" alt="brush sample">Circle Fuzzy (11)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_13.png" width="32" height="32" alt="brush sample">Circle Fuzzy (13)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_15.png" width="32" height="32" alt="brush sample">Circle Fuzzy (15)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_17.png" width="32" height="32" alt="brush sample">Circle Fuzzy (17)</div>
-<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_19.png" width="32" height="32" alt="brush sample">Circle Fuzzy (19)</div>
-<div><img style="vertical-align: text-middle;" src="Confetti.png" width="32" height="32" alt="brush sample">Confetti</div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush</div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush2.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush#2</div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush3.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush#3</div>
+<div><img style="vertical-align: text-middle;" src="Calligraphic_Brush4.png" width="32" height="32" alt="brush sample"/>Calligraphic Brush#4</div>
+<div><img style="vertical-align: text-middle;" src="Circle_01.png" width="32" height="32" alt="brush sample"/>Circle (01)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_03.png" width="32" height="32" alt="brush sample"/>Circle (03)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_05.png" width="32" height="32" alt="brush sample"/>Circle (05)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_07.png" width="32" height="32" alt="brush sample"/>Circle (07)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_09.png" width="32" height="32" alt="brush sample"/>Circle (09)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_11.png" width="32" height="32" alt="brush sample"/>Circle (11)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_13.png" width="32" height="32" alt="brush sample"/>Circle (13)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_15.png" width="32" height="32" alt="brush sample"/>Circle (15)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_17.png" width="32" height="32" alt="brush sample"/>Circle (17)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_19.png" width="32" height="32" alt="brush sample"/>Circle (19)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_03.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (03)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_05.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (05)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_07.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (07)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_09.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (09)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_11.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (11)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_13.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (13)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_15.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (15)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_17.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (17)</div>
+<div><img style="vertical-align: text-middle;" src="Circle_Fuzzy_19.png" width="32" height="32" alt="brush sample"/>Circle Fuzzy (19)</div>
+<div><img style="vertical-align: text-middle;" src="Confetti.png" width="32" height="32" alt="brush sample"/>Confetti</div>
 <div><p>half way point</p></div>
-<div><img style="vertical-align: text-middle;" src="Diagonal_Star_11.png" width="32" height="32" alt="brush sample">Diagonal Star (11)</div>
-<div><img style="vertical-align: text-middle;" src="Diagonal_Star_17.png" width="32" height="32" alt="brush sample">Diagonal Star (17)</div>
-<div><img style="vertical-align: text-middle;" src="Diagonal_Star_25.png" width="32" height="32" alt="brush sample">Diagonal Star (25)</div>
-<div><img style="vertical-align: text-middle;" src="Felt_Pen.png" width="32" height="32" alt="brush sample">Felt Pen</div>
-<div><img style="vertical-align: text-middle;" src="GIMP_Brush.png" width="32" height="32" alt="brush sample">GIMP Brush</div>
-<div><img style="vertical-align: text-middle;" src="Galaxy_AP.png" width="32" height="32" alt="brush sample">Galaxy (AP)</div>
-<div><img style="vertical-align: text-middle;" src="Galaxy_Big.png" width="32" height="32" alt="brush sample">Galaxy, Big</div>
-<div><img style="vertical-align: text-middle;" src="Galaxy_Small_AP.png" width="32" height="32" alt="brush sample">Galaxy, Small (AP)</div>
-<div><img style="vertical-align: text-middle;" src="Pencil_Sketch.png" width="32" height="32" alt="brush sample">Pencil Sketch</div>
-<div><img style="vertical-align: text-middle;" src="Pencil_Sketch2.png" width="32" height="32" alt="brush sample">Pencil Sketch#2</div>
-<div><img style="vertical-align: text-middle;" src="Pencil_Sketch3.png" width="32" height="32" alt="brush sample">Pencil Sketch#3</div>
-<div><img style="vertical-align: text-middle;" src="Pepper.png" width="32" height="32" alt="brush sample">Pepper</div>
-<div><img style="vertical-align: text-middle;" src="Property_of_XCF!.png" width="32" height="32" alt="brush sample">Property of XCF!</div>
-<div><img style="vertical-align: text-middle;" src="Sand_Dunes_AP.png" width="32" height="32" alt="brush sample">Sand Dunes (AP)</div>
-<div><img style="vertical-align: text-middle;" src="Sparks.png" width="32" height="32" alt="brush sample">Sparks</div>
-<div><img style="vertical-align: text-middle;" src="Vine.png" width="32" height="32" alt="brush sample">Vine</div>
-<div><img style="vertical-align: text-middle;" src="animated_Confetti.png" width="32" height="32" alt="brush sample">animated Confetti</div>
-<div><img style="vertical-align: text-middle;" src="pixel_1x1_square.png" width="32" height="32" alt="brush sample">pixel (1x1 square)</div>
-<div><img style="vertical-align: text-middle;" src="square_10x10.png" width="32" height="32" alt="brush sample">square (10x10)</div>
-<div><img style="vertical-align: text-middle;" src="square_10x10_blur.png" width="32" height="32" alt="brush sample">square (10x10) blur</div>
-<div><img style="vertical-align: text-middle;" src="square_20x20.png" width="32" height="32" alt="brush sample">square (20x20)</div>
-<div><img style="vertical-align: text-middle;" src="square_20x20_blur.png" width="32" height="32" alt="brush sample">square (20x20) blur</div>
-<div><img style="vertical-align: text-middle;" src="square_5x5.png" width="32" height="32" alt="brush sample">square (5x5)</div>
-<div><img style="vertical-align: text-middle;" src="square_5x5_blur.png" width="32" height="32" alt="brush sample">square (5x5) blur</div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_11.png" width="32" height="32" alt="brush sample"/>Diagonal Star (11)</div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_17.png" width="32" height="32" alt="brush sample"/>Diagonal Star (17)</div>
+<div><img style="vertical-align: text-middle;" src="Diagonal_Star_25.png" width="32" height="32" alt="brush sample"/>Diagonal Star (25)</div>
+<div><img style="vertical-align: text-middle;" src="Felt_Pen.png" width="32" height="32" alt="brush sample"/>Felt Pen</div>
+<div><img style="vertical-align: text-middle;" src="GIMP_Brush.png" width="32" height="32" alt="brush sample"/>GIMP Brush</div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_AP.png" width="32" height="32" alt="brush sample"/>Galaxy (AP)</div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_Big.png" width="32" height="32" alt="brush sample"/>Galaxy, Big</div>
+<div><img style="vertical-align: text-middle;" src="Galaxy_Small_AP.png" width="32" height="32" alt="brush sample"/>Galaxy, Small (AP)</div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch.png" width="32" height="32" alt="brush sample"/>Pencil Sketch</div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch2.png" width="32" height="32" alt="brush sample"/>Pencil Sketch#2</div>
+<div><img style="vertical-align: text-middle;" src="Pencil_Sketch3.png" width="32" height="32" alt="brush sample"/>Pencil Sketch#3</div>
+<div><img style="vertical-align: text-middle;" src="Pepper.png" width="32" height="32" alt="brush sample"/>Pepper</div>
+<div><img style="vertical-align: text-middle;" src="Property_of_XCF!.png" width="32" height="32" alt="brush sample"/>Property of XCF!</div>
+<div><img style="vertical-align: text-middle;" src="Sand_Dunes_AP.png" width="32" height="32" alt="brush sample"/>Sand Dunes (AP)</div>
+<div><img style="vertical-align: text-middle;" src="Sparks.png" width="32" height="32" alt="brush sample"/>Sparks</div>
+<div><img style="vertical-align: text-middle;" src="Vine.png" width="32" height="32" alt="brush sample"/>Vine</div>
+<div><img style="vertical-align: text-middle;" src="animated_Confetti.png" width="32" height="32" alt="brush sample"/>animated Confetti</div>
+<div><img style="vertical-align: text-middle;" src="pixel_1x1_square.png" width="32" height="32" alt="brush sample"/>pixel (1x1 square)</div>
+<div><img style="vertical-align: text-middle;" src="square_10x10.png" width="32" height="32" alt="brush sample"/>square (10x10)</div>
+<div><img style="vertical-align: text-middle;" src="square_10x10_blur.png" width="32" height="32" alt="brush sample"/>square (10x10) blur</div>
+<div><img style="vertical-align: text-middle;" src="square_20x20.png" width="32" height="32" alt="brush sample"/>square (20x20)</div>
+<div><img style="vertical-align: text-middle;" src="square_20x20_blur.png" width="32" height="32" alt="brush sample"/>square (20x20) blur</div>
+<div><img style="vertical-align: text-middle;" src="square_5x5.png" width="32" height="32" alt="brush sample"/>square (5x5)</div>
+<div><img style="vertical-align: text-middle;" src="square_5x5_blur.png" width="32" height="32" alt="brush sample"/>square (5x5) blur</div>
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
