--- a/unix/howtos/cvs-stable.html
+++ b/unix/howtos/cvs-stable.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - How To Get and Build the Stable GIMP from CVS</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
 <div class="heading">CVS Is Not That Scary</div>
 
 <div class="subtitle">or Get and Build CVS GIMP 1.2 </div>
@@ -76,9 +76,8 @@
 <p>
    The first time you compile anything it can be complicated. Rest assured, GIMP is no exception. This section is no longer about CVS  but now about building an active piece of software. Active as it is being updated and worked on, sometimes on a nightly basis. Please be patient. 
 </p>
-      
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+
+<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
         How To &copy; 2002 <a href="mailto:bex@gimp.org">Rebecca J. Walter</a>
@@ -87,6 +86,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
