--- a/resources/index.html
+++ b/resources/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Resources</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Resources</div>
 <div class="subtitle">Included With The GIMP</div>
@@ -24,5 +24,5 @@
   <li><a href="generated_brushes.html">Generated Brushes</a></li>
 </ul>
 
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
