--- a/unix/user_install.html
+++ b/unix/user_install.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Unix user_install</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
 <div class="heading">Tips and Tricks for user_install</div>
 <p>
@@ -39,8 +39,8 @@ to be.  There is a scroll bar to see all the things The GIMP has for you.
 Setting your memory usage is not an easy thing.  So much depends on what your needs
 are for the gimp and what hardware you have to work with.  You have two options
 at this point.  Go with the default value the developers have set here, or determine
-the best value from this <a href="tile_cache.html">tile_cache</a> explanation.  
-This <a href="tile_cache.html">tile_cache</a> information might also be helpful 
+the best value from this <a href="tile-cache.html">tile-cache</a> explanation.  
+This <a href="tile-cache.html">tile-cache</a> information might also be helpful 
 to you if you are encountering memory problems when using the gimp.
 (<a href="ui-performance.png">screenshot</a>)
 </p>
@@ -52,18 +52,16 @@ to you if you are encountering memory problems when using the gimp.
 Monitor Resolution is the ratio of 
 (<a href="ui-moniter.png">screenshot</a>).
 </p>
-<p>
 <ol>
 <li>Get Resolution from windowing system</li>
 <li>Set Manually</li>
 <li>Push the Calibrate Button</li>
 </ol>
-</p>
 <div class="subtitle">The Calibrate Dialog</div>
 <p>
 My monitor was impressively off when I tried the Calibrate Dialog 
 The Calibrate Game is fun to play.  You will need a soft ruler.  
 (<a href="ui-calibrate.png">screenshot</a>).
 </p>
-<!--#include virtual="/includes/linkbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
