Changed the ChangeLog formatting to include a heading for all and a
* Changed the ChangeLog formatting to include a heading for all
  and a timestamp for only the GIMP untable ChangeLog.

* Moved the ChangeLog fetching and formating from
  /about/ChangeLogs to /develop

--- a/programmatic/admin/howto.html
+++ b/programmatic/admin/howto.html
@@ -5,6 +5,7 @@
   <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
   <div class="heading">gimp.org Administration HOWTO</div>
+  <!-- h1 class="heading">gimp.org Administration HOWTO</h1 -->
   <p>
     <div class="subtitle">http.conf</div>
     <p>
