--- a/unix/howtos/template-in.html
+++ b/unix/howtos/template-in.html
@@ -1,10 +1,10 @@
 <!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-<title>GIMP - A title</title>
+<title>GIMP - How To Title</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
-<div class="heading">Some heading</div>
+<h1>How To Title</h1>
 
-<div class="subtitle">A subtitle</div>
+<h2>A subtitle</h2>
 <p>
   Information.
 </p>
@@ -12,6 +12,7 @@
   <li>A list of something</li>
   <li>More in the list.</li>
 </ol>
+<h3>an even more subtitle</h3>
 <p>
   This is a key stroke <kbd>Ctrl+C</kbd>.
 </p>
@@ -27,8 +28,8 @@ main()
   More information about the code or something.
 </p>
 
-<div class="heading">Another header (if needed)</div>
-<div class="subtitle">Another subtitle</div>
+<h1>Another header (if needed)</h1>
+<h2>Another subtitle</h2>
 <p>
   More information.
 </p>
@@ -36,10 +37,10 @@ main()
 <!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        How To &copy; 2002 <a href="mailto:author@address.org">Author name</a>
+        How To &copy; 2002 <a href="mail:People-author">Author name</a>
       </span>
       <span id="footerright">
-        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="mail:People-webmaster">webmaster@gimp.org</a>
       </span>
     </div>
 <!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
