--- a/unix/index.html
+++ b/unix/index.html
@@ -1,30 +1,32 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml"  -->
 <title>GIMP - GIMP for Unix</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
-<!--#include virtual="/includes/wgo-page-init.xhtml" -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml"  -->
+<!--#include virtual="/includes/wgo-page-init.xhtml"  -->
 
-<div class="heading">GIMP for Unix</div>
-<div class="subtitle"><a href="INSTALL">Installation Instructions</a></div>
-<div class="subtitle">GNU/Linux How To's</div>
+<h1>GIMP for Unix</h1>
+<h2><a href="INSTALL">Installation Instructions</a></h2>
+<h2>GNU/Linux How To's</h2>
   <ul>
-    <li><a href="howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
+    <li><a href="wgo:unix-howtos_stable_cvs_get">Get The Stable GIMP from CVS</a></li>
+    <li><a href="wgo:unix-howtos_stable_cvs_build">Build The Stable GIMP from CVS</a></li>
+    <li><a wgo="/unix/howtos/bugzilla.html">How To Bugzilla</a></li>
   </ul>
-<div class="subtitle">The GIMP's Documentation</div>
+<h2>The GIMP's Documentation</h2>
   <ul>
-    <li><a href="../docs/gimp-help/">Help Documentation</a></li>
-    <li><a href="man-gimp-1.2.html">man gimp</a></li>
-    <li><a href="man-gimptool-1.2.html">man gimptool</a></li>
-    <li><a href="man-gimprc.1.html">man gimprc</a></li>
-    <li><a href="man-gimp-remote-1.2.html">man gimp-remote</a></li>
+    <li><a wgo="/docs/gimp-help/">Help Documentation</a></li>
+    <li><a wgo="/unix/man-gimp-1.2.html">man gimp</a></li>
+    <li><a wgo="/unix/man-gimptool-1.2.html">man gimptool</a></li>
+    <li><a wgo="/unix/man-gimprc.1.html">man gimprc</a></li>
+    <li><a wgo="/unix/man-gimp-remote-1.2.html">man gimp-remote</a></li>
   </ul>
-<div class="subtitle">The GIMP's Preferences</div>
+<h2>The GIMP's Preferences</h2>
   <ul>
-    <li><a href="user_install.html">user_install</a></li>
-    <li><a href="tile-cache.html">Tile Cache</a></li>
-    <li><a href="user_install.html">File --&gt;Preferences</a></li>
-    <li><a href="gimprc.html">gimprc</a></li>
-    <li><a href="gtkrc.html">gtkrc</a></li>
+    <li><a wgo="/unix/user_install.html">user_install</a></li>
+    <li><a wgo="/unix/tile-cache.html">Tile Cache</a></li>
+    <li><a wgo="/unix/preferences.html">File --&gt;Preferences</a></li>
+    <li><a wgo="/unix/gimprc">gimprc</a></li>
+    <li><a wgo="/unix/gtkrc">gtkrc</a></li>
   </ul>
 
-<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
+<!--#include virtual="/includes/wgo-page-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml"  -->
